# haard-compiler

./: .gitignore  CMakeLists.txt  ISA.txt  README.md
include/: defs.h
include/ast/: array_type.h  ast.h  ast_node.h  binary_expression.h  class.h  compound_statement.h  elif_statement.h  else_statement.h  expression.h  expression_list.h  expression_statement.h  function.h  identifier.h  if_statement.h  import.h  indirection_type.h  literal_expression.h  method.h  named_type.h  new_expression.h  program.h  source_file.h  statement.h  template_list.h  type.h  unary_expression.h  variable.h  while_statement.h
include/cpp/: cpp_builder.h
include/driver/: driver.h
include/ir/: ir.h  ir_builder.h
include/lex/: lex.h  lex_state.h
include/parser/: parser.h
include/pool/: ast_pool.h  type_pool.h
include/scanner/: scanner.h  scanner_state.h
include/symtab/: scope.h  scope_builder.h  symbol.h
include/token/: token.h
include/utils/: string_pool.h  utils.h
samples/: arrays.hd  fib.hd  hello.hd  one_to_ten.hd  pointers.hd  ppm.hd  simple_class.hd  simple_ppm.hd  test_escape.hd  test_vector.hd  type_inference.hd
samples/std/: io.hd  out.cpp  vector.hd
src/: main.cpp
src/ast/: array_type.cpp  ast.cpp  ast_node.cpp  binary_expression.cpp  class.cpp  compound_statement.cpp  elif_statement.cpp  else_statement.cpp  expression.cpp  expression_list.cpp  expression_statement.cpp  function.cpp  identifier.cpp  if_statement.cpp  import.cpp  indirection_type.cpp  literal_expression.cpp  method.cpp  named_type.cpp  new_expression.cpp  program.cpp  source_file.cpp  statement.cpp  template_list.cpp  type.cpp  unary_expression.cpp  variable.cpp  while_statement.cpp
src/cpp/: cpp_builder.cpp
src/driver/: driver.cpp
src/ir/: ir.cpp  ir_builder.cpp
src/lex/: lex.cpp  lex_state.cpp
src/parser/: parser.cpp
src/pool/: ast_pool.cpp  type_pool.cpp  type_pool.h
src/scanner/: scanner.cpp  scanner_state.cpp
src/symtab/: scope.cpp  scope_builder.cpp  symbol.cpp
src/token/: token.cpp
src/utils/: string_pool.cpp  utils.cpp
